--- a/index.html
+++ b/index.html
@@ -12,51 +12,73 @@
 
 <body>
   <div class="top-container">
-    <img class="top-c" src="Images/cloud.png" alt="cloud-image">
-    <h1>I'm Aakash</h1>
-    <p class="new">New to programming</p>
-    <img class="bottom-c" src="Images/cloud.png" alt="cloud-image">
-    <img class="mount" src="Images/mountain.png" alt="mountain-image">
-  </div>
-  <div class="middle-container">
-  <div class="profile">
-    <img src="" alt="">
-    <hr>
-    <img class="myimage" src="B.png" alt="My Image">
-    <h2>Hello.</h2>
-    <p class="p3"><em>I am still learning.</em></p>
-    <p class="p4">I love football, cricket, music, movies and TV.</p>
-  </div>
-  <hr>
-  <div class="hobbies">
-    <h2>My Hobbies.</h2>
-    <div class="hobby-row">
-      <img class="coding" src="coding.png" alt="">
-      <h3>Programming</h3>
-      <p>I'm still a beginner. I know Python, Java, HTML5, CSS, C++ and C.</p>
+    <div class="clouds">
+      <img class="top-c" src="Images/cloud.png" alt="cloud-image">
+      <h1>I'm Aakash</h1>
+      <p class="new">New to programming</p>
+      <img class="bottom-c" src="Images/cloud.png" alt="cloud-image">
     </div>
-    <div class="hobby-row">
-      <img class="gaming" src="gaming.png" alt="">
-      <h3>Gaming</h3>
-      <p class="p5">I love gaming. I started gaming when I was 8. My favourite genres are open-world, RPG, immersive sims.</p>
+    <div class="mount1">
+      <img class="mount" src="Images/mountain.png" alt="mountain-image">
+    </div </div>
+    <div class="middle-container">
+      <hr>
+      <div class="profile">
+        <img class="myimage" src="B.png" alt="My Image">
+        <h2>Hello.</h2>
+        <p class="p3"><em>I am still learning.</em></p>
+        <p class="p4">I love football, cricket, music, movies and TV.</p>
+        <div class="flex5">
+          <img class="football" src="football.png" alt="football-image">
+          <img class="cricket" src="cricket.png" alt="cricket-image">
+          <img class="music" src="music.png" alt="music-image">
+          <img class="movies" src="movies.png" alt="movies-image">
+          <img class="tv" src="tv.png" alt="tv-image">
+        </div>
+      </div>
+      <hr id="hr1">
+      <div class="hobbies">
+        <h2 class="hobby3">My Hobbies.</h2>
+        <div class="hobby-row1">
+          <div class="flex1">
+            <img class="coding" src="coding.png" alt="">
+            <div class="flex3">
+              <h3 class="header1">Programming</h3>
+              <p class="p6">I'm still a beginner. I know Python, Java, HTML5, CSS, C++ and C.</p>
+            </div>
+          </div>
+        </div>
+        <div class="hobby-row2">
+          <div class="flex2">
+            <img class="gaming" src="gaming.png" alt="">
+            <div class="flex4">
+              <h3 class="header2">Gaming</h3>
+              <p class="p5">I love gaming. I started gaming when I was 8. My favourite genres are open-world, RPG, immersive sims.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--<div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h4>If you like watching football/cricket as much as I do.</h4>
+      <p class="p1">Are you a Arsenal fan or KKR fan? even if you are not, lets talk anyways.</p>
+      <a class="btn" href="mailto:akash44mishra@gmail.com">CONTACT ME</a>
+    </div>-->
     </div>
-  </div>
-  <hr>
-  <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h4>If you like watching football/cricket as much as I do.</h4>
-    <p class="p1">Are you a Arsenal fan or KKR fan? even if you are not, lets talk anyways.</p>
-    <a class="btn" href="mailto:akash44mishra@gmail.com">CONTACT ME</a>
-  </div>
-  </div>
-
-
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/"
-    target="_blank">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/" target="_blank">Twitter</a>
-    <p class="p2">© 2021 Aakash Mishra</p>
-  </div>
+    <div class="bottom-container">
+      <hr id="hr2">
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h4>If you like watching football/cricket as much as I do.</h4>
+        <p class="p1">Are you a Arsenal fan or KKR fan? even if you are not, lets talk anyways.</p>
+        <a class="btn" href="mailto:akash44mishra@gmail.com">CONTACT ME</a>
+      </div>
+      <div class="links">
+        <a class="footer-link" href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/" target="_blank">Twitter</a>
+        <p class="p2">© 2021 Aakash Mishra</p>
+      </div>
+    </div>
 </body>
 
 </html>
