--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
     <div class="mount1">
       <img class="mount" src="Images/mountain.png" alt="mountain-image">
-    </div </div>
+    </div> 
+  </div>
     <div class="middle-container">
       <hr>
       <div class="profile">
